[gd_scene load_steps=2 format=3 uid="uid://cq0nirjgy0wn8"]

[ext_resource type="Script" uid="uid://bu72pm531wiiw" path="res://scripts/quicktime_event_minigame.gd" id="1_e8an3"]

[node name="QuicktimeEventMinigame" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_e8an3")
successes_needed = 7

[node name="LabelControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LabelControl"]
visible = false
layout_mode = 0
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
theme_override_font_sizes/font_size = 128
text = "X"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TutorialLabel" type="Label" parent="LabelControl"]
layout_mode = 0
offset_left = -900.0
offset_top = -400.0
offset_right = 900.0
offset_bottom = -200.0
theme_override_font_sizes/font_size = 64
text = "Hit the correct key in time!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TimeToHitEvent" type="Timer" parent="."]
one_shot = true

[node name="TimeBetweenEvents" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="TimeToHitEvent" to="." method="_on_time_to_hit_event_timeout"]
[connection signal="timeout" from="TimeBetweenEvents" to="." method="_on_time_between_events_timeout"]
